# rsstools

./: .gitignore  README.md  pyproject.toml  setup.py
rsstools/: __init__.py  __main__.py  cli.py  exceptions.py  feed_creator.py  feed_validator.py  templates.py
