[project]
name = "rsstools"
version = "0.3.1"
description = "tools for managing rss feeds"
authors = [
    { name = "sctech", email = "gamerselimiko@gmail.com" }
]
dependencies = [
    "click"
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
readme = "README.md"
keywords = ["rss", "feed", "rssfeed", "xml", "tool", "cli", "rssxml", "atomrss", "rssatom", "news", "atom", "rssfeed", "rssfeedreader", "rssfeedparser", "rssfeedgenerator", "rssfeedmanager"]
urls = { source = "https://github.com/sctech-tr/rsstools" }

[project.scripts]
rsstools = "rsstools.cli:main"

[tool.setuptools]
packages = ["rsstools"]
include-package-data = true

[tool.setuptools.package-data]
"rsstools" = ["data/*.json", "config/*.ini"]